[package]
name = "script-format"
version = "2.1.0"
edition = "2021"
description = "A simple DSL to format data via rhai scripting"
license-file = "LICENSE"
repository = "https://github.com/hardliner66/script-format"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rhai = { version = "1.21", features = ["internals"] }
rsn = "0.2"
serde-value = "0.7"
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

[features]
default = []
web = []
